# mini-projects

./: CMakeLists.txt  README.md
TestBoostTest/: CMakeLists.txt  test_boosttest.cpp
concurrency/: CMakeLists.txt  README.md
concurrency/accumulation/: CMakeLists.txt  accumulation.hpp  accumulation_test.cpp
concurrency/hello_concurrency_world/: CMakeLists.txt  hello.cpp
concurrency/hierarchical_mutex/: CMakeLists.txt  hierarchical_mutex.h  test.cpp  test_func.h
figures/: CMakeLists.txt  figures.cpp  figures.h  figures_main.cpp
kivy/comic_creator/: comiccreator.kv  drawingspace.kv  generaloptions.kv  main.py  statusbar.kv  toolbox.kv
